src/objects/Teach_A__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class_A__c</referenceTo>
        <relationshipLabel>Teaches_A</relationshipLabel>
        <relationshipName>Teaches_A</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teaches_A</relationshipLabel>
        <relationshipName>Teaches_A</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teach_A</label>
    <nameField>
        <label>Teach_A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teaches_A</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>